--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -225,6 +225,24 @@ h6 {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+#gdpr {
+  font-size: 85%;
+  background-color: @nats-brand-gray-light;
+  color: @text-color;
+  padding: 20px;
+  border-top: solid black;
+  opacity: 1.0;
+}
+
+#gdpr > h3 {
+  font-size: 18pt;
+  margin-top: 0
+}
+
+a.dynamic {
+  cursor: pointer;
+};
+
 // Tables
 table {
   .table();
