--- a/layouts/partials/doc/max_payload.html
+++ b/layouts/partials/doc/max_payload.html
@@ -14,6 +14,18 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="py">
+		  <a data-toggle="tab" href="#max_payload-py">Python</a>
+		</li>
+		
+	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#max_payload-ts">TypeScript</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -39,6 +51,34 @@ long max = nc.getMaxPayload();
 // Do something with the max payload
 
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="max_payload-py"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/asyncio-nats-examples/blob/master/max_payload.py#L6-15"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-python">nc = NATS()
+
+await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;])
+
+print(&#34;Maximum payload is %d bytes&#34; % nc.max_payload)
+
+# Do something with the max payload.
+
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="max_payload-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/options_samples.ts#L29-42"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">//     // will throw an exception if connection fails
+//     let nc = await connect({
+//         url: &#34;nats://demo.nats.io:4222&#34;
+//     });
+//
+//     nc.on(&#39;connect&#39;, ()=&gt; {
+//         //@ts-ignore
+//         let si = nc.getServerInfo();
+//         if(si) {
+//             console.log(&#39;max_payload&#39;, si.max_payload);
+//         }
+//     });
 </code></pre>
 		
 	
